@@ -4,11 +4,19 @@ plugins {
 }
 
 group = "io.github.madethoughts"
-version = "unspecified"
+version = "0.1"
 
 repositories {
     mavenCentral()
 }
+
+dependencies {
+    implementation("org.json", "json", "20220924")
+
+    testImplementation("org.junit.jupiter:junit-jupiter-api:5.8.1")
+    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.8.1")
+}
+
 
 java {
     toolchain {
@@ -16,15 +24,22 @@ java {
     }
 }
 
+val ENABLE_PREVIEW = listOf(
+    "--enable-preview"
+)
 application {
+    mainModule.set("io.github.madethoughts.hope")
     mainClass.set("io.github.madethoughts.hope.Application")
+    applicationDefaultJvmArgs = ENABLE_PREVIEW
 }
 
-dependencies {
-    testImplementation("org.junit.jupiter:junit-jupiter-api:5.8.1")
-    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.8.1")
-}
+tasks {
+    compileJava {
+        options.compilerArgs = ENABLE_PREVIEW
+        modularity.inferModulePath.set(true)
+    }
 
-tasks.getByName<Test>("test") {
-    useJUnitPlatform()
+    test {
+        useJUnitPlatform()
+    }
 }
